--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,23 @@
 </head>
 <body>
 	<p>Welcome to the chat app.</p>
+
+	<ol id="msg-list">
+		
+
+	</ol>
+
+	<form id="message-form">
+		<input type="text" name="message" placeholder="Enter the message">
+		<button>Send</button>
+	</form>
+
 	
 
 	<script src="socket.io/socket.io.js"></script>
+	<script src="/js/libs/jQuery.js"></script>
 	<script src="/js/index.js"></script>
+	
 
 </body>
 </html>
