Add geolocation support via geolocation api

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 		<input type="text" name="message" placeholder="Enter the message">
 		<button>Send</button>
 	</form>
+	<button id="geo-button" >Send Location</button>
 
 	
 
