--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 		</div>
 		
 	</div>
-
+	<script src="/js/libs/moment.js"></script>
 	<script src="socket.io/socket.io.js"></script>
 	<script src="/js/libs/jQuery.js"></script>
 	<script src="/js/index.js"></script>
