--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,38 @@
 		</div>
 		
 	</div>
+
+	<script type="text/template" id="message-template">
+		<li class="message">
+
+			<div class="message__title">
+				<h4>{{from}}</h4>
+				<span>{{createdAt}}</span>
+			</div>
+
+			<div class="message__body">
+				<p>{{text}}</p>
+			</div>
+
+		</li>
+	</script>
+
+	<script type="text/template" id="location-message-template">
+		<li class="message">
+			<div class="message__title">
+				<h4>{{from}}</h4>
+				<span>{{createdAt}}</span>
+			</div>
+			<div class="message__body">
+				<a href="{{url}}" target="_blank">My current Location</a>
+			</div>
+		</li>
+	</script>
+
 	<script src="/js/libs/moment.js"></script>
-	<script src="socket.io/socket.io.js"></script>
+	<script src="/js/libs/mustache.js"></script>
 	<script src="/js/libs/jQuery.js"></script>
+	<script src="socket.io/socket.io.js"></script>
 	<script src="/js/index.js"></script>
 	
 
