--- a/public/index.html
+++ b/public/index.html
@@ -1,63 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home Page</title>
+	<title>Join | Chatapp</title>
+	<meta charset="utf-8" >
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
-<body class="chat">
-
-	<div class="chat__sidebar">
-		<h3>People</h3>
-		<div id="users"></div>
+<body class="centered-form">
+	<div class="centered-form__form">
+		<form action="/chat.html">
+			<div class="form-field">
+				<h3>Join a chat</h3>
+			</div>
+			<div class="form-field">
+				<label>Display name</label>
+				<input type="text" name="name" autofocus >
+			</div>
+			<div class="form-field">
+				<label>Room name</label>
+				<input type="text" name="room"  >
+			</div>
+			<div class="form-field">
+				<button>Join</button>
+			</div>
+		</form>
 	</div>
-
-	<div class="chat__main">
-		
-		<ol id="msg-list" class="chat__messages"></ol>
-
-		<div class="chat__footer">
-			<form id="message-form" >
-			<input name="message" type="text" placeholder="Enter the message" autofocus autocomplete="off">
-			<button>Send</button>
-			<button id="geo-button" >Send location</button>
-			</form>
-		</div>
-		
-	</div>
-
-	<script type="text/template" id="message-template">
-		<li class="message">
-
-			<div class="message__title">
-				<h4>{{from}}</h4>
-				<span>{{createdAt}}</span>
-			</div>
-
-			<div class="message__body">
-				<p>{{text}}</p>
-			</div>
-
-		</li>
-	</script>
-
-	<script type="text/template" id="location-message-template">
-		<li class="message">
-			<div class="message__title">
-				<h4>{{from}}</h4>
-				<span>{{createdAt}}</span>
-			</div>
-			<div class="message__body">
-				<a href="{{url}}" target="_blank">My current Location</a>
-			</div>
-		</li>
-	</script>
-
-	<script src="/js/libs/moment.js"></script>
-	<script src="/js/libs/mustache.js"></script>
-	<script src="/js/libs/jQuery.js"></script>
-	<script src="socket.io/socket.io.js"></script>
-	<script src="/js/index.js"></script>
-	
 
 </body>
 </html>
