--- a/public/chat.html
+++ b/public/chat.html
@@ -52,10 +52,11 @@
 		</li>
 	</script>
 
-	<script src="/js/libs/moment.js"></script>
-	<script src="/js/libs/mustache.js"></script>
-	<script src="/js/libs/jQuery.js"></script>
 	<script src="socket.io/socket.io.js"></script>
+	<script src="/js/libs/jQuery.js"></script>
+	<script src="/js/libs/mustache.js"></script>
+	<script src="/js/libs/moment.js"></script>
+	<script src="/js/libs/deparam.js"></script>
 	<script src="/js/chat.js"></script>
 	
 
