--- a/public/chat.html
+++ b/public/chat.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Chat | Chatapp</title>
+	<meta charset="utf-8" >
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body class="chat">
